fix dark mode muted bg color

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -12,7 +12,7 @@
 	html.dark {
 		--color-text-main: #f2f1ec;
 		--color-bg-main: #1c0615;
-		--color-bg-muted: #21101c;
+		--color-bg-muted: #12010c;
 		--color-border-main: #f2f1ec;
 	}
 
